--- a/server.properties
+++ b/server.properties
@@ -13,7 +13,7 @@ player-idle-timeout=0
 difficulty=1
 spawn-monsters=true
 op-permission-level=4
-pvp=true
+pvp=false
 snooper-enabled=true
 level-type=DEFAULT
 hardcore=false
@@ -36,5 +36,5 @@ online-mode=true
 max-build-height=256
 level-seed=
 prevent-proxy-connections=false
-motd=A Minecraft Server
+motd=THE GANG PLAYS MINECRAFT
 enable-rcon=false
